# images

./: .gitignore  Cargo.toml  README.md
images-proc/: Cargo.toml
images-proc/src/: errors.rs  lib.rs  rgbimage.rs  utils.rs
images-proc/src/create_im/: hori_vert_lines.rs  mod.rs  random_shapes.rs
src/: main.rs
src/lib/: bsc.rs  create_im.rs  lib.rs
src/lib/create_im/: hori_vert_lines.rs  random_shapes.rs  random_squares.rs
tests/: hori_vert_test.rs  random_image_test.rs
