[package]
name = "images"
version = "0.1.0"
authors = ["REIS0 <aor@cesar.school>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "images"
path = "src/lib/lib.rs"

[[bin]]
name = "images"
path = "src/bin/main.rs"

[dependencies]
image = "0.23"
rand = "0.7"
gif = "0.10.3"